--- a/www/index.html
+++ b/www/index.html
@@ -19,9 +19,13 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- yike app's js -->
+    <script src="lib/yike/js/yike.js"></script>
+    <script src="lib/yike/js/controller/userController.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/account.js"></script>
+    <script src="js/user.js"></script>
     <script src="js/common.js"></script>
     <script src="js/order.js"></script>
     <script src="js/item.js"></script>
