--- a/www/index.html
+++ b/www/index.html
@@ -16,19 +16,24 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- av js -->
+    <script src="lib/leancloud-javascript-sdk/dist/av.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- yike app's js -->
+    <!-- yike -->
     <script src="lib/yike/js/yike.js"></script>
+    <script src="lib/yike/js/service/user.js"></script>
     <script src="lib/yike/js/controller/userController.js"></script>
 
-    <!-- your app's js -->
+    <!-- app js -->
     <script src="js/app.js"></script>
     <script src="js/user.js"></script>
     <script src="js/common.js"></script>
     <script src="js/order.js"></script>
     <script src="js/item.js"></script>
+
 </head>
 <body ng-app="app">
 <!--
