--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/common.js"></script>
     <script src="js/order.js"></script>
     <script src="js/item.js"></script>
+    <script src="js/address.js"></script>
 
 </head>
 <body ng-app="app">
