--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
 
     <!-- yike -->
     <script src="lib/yike/js/yike.js"></script>
+    <script src="lib/yike/js/model.js"></script>
     <script src="lib/yike/js/service/user.js"></script>
     <script src="lib/yike/js/controller/userController.js"></script>
 
