--- a/www/index.html
+++ b/www/index.html
@@ -30,12 +30,14 @@
     <script src="lib/yike/js/controller/userController.js"></script>
 
     <!-- app js -->
-    <script src="js/app.js"></script>
     <script src="js/user.js"></script>
     <script src="js/common.js"></script>
     <script src="js/order.js"></script>
     <script src="js/item.js"></script>
-    <script src="js/address.js"></script>
+    <script src="js/address/address.list.js"></script>
+    <script src="js/address/address.add.js"></script>
+    <script src="js/address/address.js"></script>
+    <script src="js/app.js"></script>
 
 </head>
 <body ng-app="app">
