更新 易刻框架

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
     <!-- yike -->
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/yike/js/yike.js"></script>
-    <script src="lib/yike/js/model.js"></script>
+    <script src="lib/yike/js/db.js"></script>
     <script src="lib/yike/js/service/user.js"></script>
     <script src="lib/yike/js/controller/userController.js"></script>
 
