更新 易刻框架目录结构

--- a/www/index.html
+++ b/www/index.html
@@ -26,8 +26,13 @@
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/yike/js/yike.js"></script>
     <script src="lib/yike/js/db.js"></script>
-    <script src="lib/yike/js/service/user.js"></script>
-    <script src="lib/yike/js/controller/userController.js"></script>
+    <script src="lib/yike/js/user/user.js"></script>
+    <script src="lib/yike/js/user/user.factory.js"></script>
+    <script src="lib/yike/js/user/user.common.js"></script>
+    <script src="lib/yike/js/user/user.login.js"></script>
+    <script src="lib/yike/js/user/user.reg.js"></script>
+    <script src="lib/yike/js/address/address.js"></script>
+    <script src="lib/yike/js/address/address.factory.js"></script>
 
     <!-- app js -->
     <script src="js/user.js"></script>
