--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,10 @@
     <script src="js/address/address.list.js"></script>
     <script src="js/address/address.add.js"></script>
     <script src="js/address/address.js"></script>
+    <script src="js/order/order.js"></script>
+    <script src="js/order/order.factory.js"></script>
+    <script src="js/order/order.doing.js"></script>
+    <script src="js/order/order.done.js"></script>
     <script src="js/app.js"></script>
 
 </head>
