修正 引用的bug，在module里面添加依赖的时候别丢''这种空字符串

--- a/www/index.html
+++ b/www/index.html
@@ -37,15 +37,13 @@
     <!-- app js -->
     <script src="js/user.js"></script>
     <script src="js/common.js"></script>
-    <script src="js/order.js"></script>
     <script src="js/item.js"></script>
     <script src="js/address/address.list.js"></script>
     <script src="js/address/address.add.js"></script>
     <script src="js/address/address.js"></script>
     <script src="js/order/order.js"></script>
     <script src="js/order/order.factory.js"></script>
-    <script src="js/order/order.doing.js"></script>
-    <script src="js/order/order.done.js"></script>
+    <script src="js/order/order.list.js"></script>
     <script src="js/app.js"></script>
 
 </head>
