更新 重构产品列表

--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,8 @@
     <!-- app js -->
     <script src="js/user.js"></script>
     <script src="js/common.js"></script>
-    <script src="js/item.js"></script>
+    <script src="js/item/item.js"></script>
+    <script src="js/item/item.list.js"></script>
     <script src="js/address/address.list.js"></script>
     <script src="js/address/address.add.js"></script>
     <script src="js/address/address.js"></script>
