更新 按袋计价和open函数的重新定义

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
     <script src="js/common.js"></script>
     <script src="js/item/item.js"></script>
     <script src="js/item/item.list.js"></script>
+    <script src="js/item/item.bag.js"></script>
     <script src="js/address/address.list.js"></script>
     <script src="js/address/address.add.js"></script>
     <script src="js/address/address.js"></script>
