--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,7 @@
     <script src="js/order/order.js"></script>
     <script src="js/order/order.factory.js"></script>
     <script src="js/order/order.list.js"></script>
+    <script src="js/order/order.cart.js"></script>
     <script src="js/app.js"></script>
 
 </head>
