更新 注册功能更新成通过手机号注册

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="lib/yike/js/user/user.common.js"></script>
     <script src="lib/yike/js/user/user.login.js"></script>
     <script src="lib/yike/js/user/user.reg.js"></script>
+    <script src="lib/yike/js/user/user.verify.js"></script>
     <script src="lib/yike/js/address/address.js"></script>
     <script src="lib/yike/js/address/address.factory.js"></script>
 
