--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,8 @@
     <script src="js/order/order.factory.js"></script>
     <script src="js/order/order.list.js"></script>
     <script src="js/order/order.cart.js"></script>
+    <script src="js/pay/pay.js"></script>
+    <script src="js/pay/pay.show.js"></script>
     <script src="js/app.js"></script>
 
 </head>
