--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/yike/js/yike.js"></script>
     <script src="lib/yike/js/db.js"></script>
+    <script src="lib/yike/js/utils.js"></script>
     <script src="lib/yike/js/user/user.js"></script>
     <script src="lib/yike/js/user/user.factory.js"></script>
     <script src="lib/yike/js/user/user.common.js"></script>
